changes major colours

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
   <div class="section-info container">
     <div class="row">
       <div class="col-12 col-lg-6">
-        <h5 class="title-1">BRI Insurance</h5>
+        <h5 class="title-1">PT. BRI Asuransi Indonesia (BRI Insurance)  </h5>
         <h6 class="subtitle col-12 col-lg-11 p-0">Graha BRI Insurance, Jl. Mampang Prpt. Raya No.18, RT.11/RW.6,  Tegal Parang, 
           Kec. Mampang Prpt., Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12790</h6>
       </div>
