--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,5 @@
 <section class="homepage">
+  <img class="background-blur" src="../../assets/images/12649_2734ee9d4905e6ebf99bae9f3280ac3f.jpeg" alt="Background Image">
   <div class="center">
     <h1 class="section-title col-12 col-md-9 mx-auto">
       Asuransi Kendaraan yang Adil Bayar Sesuai Jarak Tempuh!
@@ -146,7 +147,7 @@
           <div class="gray-box">
             <img src="../../assets/images/icon-3.png">
           </div>
-          <h6 class="title">Most renowed data centers</h6>
+          <h6 class="title">Regulasi terbaru</h6>
         </div>
       </div>
     </div>
