--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -1,11 +1,29 @@
 .homepage {
+  position: relative;
   width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  background-color: #3734A9;
-  padding-top: 130px;
-  background-image: url(../../assets/images/bg-stuff.svg);
-  background-repeat: no-repeat;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  overflow: hidden;
+
+  .background-blur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: blur(10px);
+    z-index: -1;
+  }
+
+  .content {
+    position: relative;
+    z-index: 1;
+    color: white;
+  }
 
   .section-title {
     color: white;
@@ -38,7 +56,7 @@
 
     &:hover {
       transition: .2s ease;
-      background-color: #19af7b;
+      background-color: 00529C;
     }
   }
 
@@ -49,6 +67,31 @@
     font-weight: 500;
     min-width: 140px;
   }
+}
+
+.homepage::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../assets/images/12649_2734ee9d4905e6ebf99bae9f3280ac3f.jpeg);
+  background-size: cover;
+  background-position: center;
+  filter: blur(10px); /* Efek blur */
+  z-index: -2; /* Supaya tetap di belakang */
+}
+
+.homepage::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); /* Warna hitam semi transparan */
+  z-index: -1; /* Berada di atas gambar tapi di bawah teks */
 }
 
 .dashboard-preview {
@@ -96,7 +139,7 @@
     font-size: 18px;
     line-height: 25px;
     text-transform: uppercase;
-    color: #3734A9;
+    color: #00529C;
     margin-top: 25px;
   }
 
@@ -121,7 +164,7 @@
 
 .preference {
   width: 100%;
-  background-color: #3734A9;
+  background-color: #00529C;
   padding: 80px 0;
 
   .section-title {
@@ -148,7 +191,7 @@
     height: 80px;
     min-width: 80px;
     min-height: 80px;
-    background-color: #313091;
+    background-color: #EC6707;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -359,7 +402,7 @@
   font-weight: 500;
   color: white;
   margin-top: -15px;
-  background-color: #FF7F5C;
+  background-color: #EC6707;
   margin-left: 20px;
   border-radius: 10px;
   padding: 15px 40px;
@@ -371,7 +414,7 @@
 
   &:hover {
     transition: .2s ease;
-    background-color: #db6544;
+    background-color: #00529C;
   }
 }
 
@@ -380,12 +423,12 @@
   color: white;
   margin-top: 20px;
   padding: 15px 40px;
-  background: #3734A9;
+  background: #EC6707;
   border-radius: 7px;
 
   &:hover {
     transition: .2s ease;
-    background-color: #24208f;
+    background-color: #00529C;
   }
 }
 
@@ -708,7 +751,7 @@
       height: 50px;
       min-width: 50px;
       min-height: 50px;
-      background-color: #313091;
+      background-color: #EC6707;
       border-radius: 50%;
       display: flex;
       justify-content: center;
