--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <section class="container navbar-1">
   <div class="d-flex justify-content-between">
     <div class="col">
-      <a class="logo" href="/">BRI Insurance</a>
+      <a class="logo" href="/">
+        <img src="../../assets/images/brins.png" />
+      </a>
     </div>
     <div class="col show-sm">
       <input id="menu-toggle" type="checkbox" (click)="toggleNav()" />
