--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,10 +5,13 @@
   right: 0;
   height: 90px;
 
-  .logo {
+  .logo img {
     color: white;
     font-size: 20px;
     font-weight: bold;
+    width: 100%; /* Fit sesuai lebar container */
+    height: auto; /* Menjaga aspek rasio */
+    max-width: 225px; /* Bisa diatur sesuai kebutuhan */
   }
 
   .navigation {
@@ -25,7 +28,7 @@
 
       &:hover {
         transition: .2s ease;
-        color: #FF7F5C;
+        color: #00529C;
       }
     }
 
@@ -58,14 +61,14 @@
     font-size: 14px;
     color: white;
     margin-top: -15px;
-    background-color: #FF7F5C;
+    background-color: #EC6707;
     margin-left: 20px;
     border-radius: 10px;
     padding: 10px 40px;
 
     &:hover {
       transition: .2s ease;
-      background-color: #db6544;
+      background-color: #00529C;
     }
   }
 }
